--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "jshint": "^2.13.4",
     "nodemon": "^2.0.15"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.9"
   }
 }
