--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.0",
-    "morgan": "~1.9.1",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "jshint": "^2.13.4",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   },
   "optionalDependencies": {
